# ragsystem

./: README.md  main.py  pyproject.toml  requirements.txt
chunking/: semanticchunking.ipynb
embeddings/: embedding.ipynb
faiss/: 2-faiss.ipynb
faiss-vector-db/: faiss_rag.py
faiss_index/: index.faiss  index.pkl
